Fix:  Amarok crashes by putting a broadcast in the playlist

BUG: 313718
FIXED-IN: 2.8